# Hackathon2025

./: .gitignore  README.md  evaluation.md  guideline.md  missions.md  quick-start.md
APIs/: nickname.yaml  socket-apis.md
examples/mcp/: .env  README.md  main.py  requirements.txt
examples/mcp/OpenRA_Copilot_Library/: models.py
examples/mcp/mcp_tools/: mcp_client.py  mcp_server.py
examples/mofa/: README.md
examples/mofa-single-node/: README.md
examples/mofa-single-node/agent-hub/openra-copilot-agent/: README.md  pyproject.toml
examples/mofa-single-node/agent-hub/openra-copilot-agent/openra_copilot_agent/: main.py  openra_tools.py
examples/mofa-single-node/examples/openra-single-controller/: openra-single-controller.yml
examples/mofa/agent-hub/openra-battlefield-analyze/: pyproject.toml
examples/mofa/agent-hub/openra-battlefield-analyze/openra_battlefield_analyze/: ai_analyzer.py  battlefield_reader.py  execution_results.json  game_executor.py  main.py
examples/mofa/agent-hub/openra-battlefield-reader/: pyproject.toml
examples/mofa/agent-hub/openra-battlefield-reader/openra_battlefield_reader/: ai_analysis.json  battlefield_reader.py  battlefield_state.json  main.py  user_intent.json
examples/mofa/agent-hub/openra-copilot-agent/: .env.example  README.md  pyproject.toml
examples/mofa/agent-hub/openra-copilot-agent/openra_copilot_agent/: main.py  openra_tools.py  requirements.txt
examples/mofa/agent-hub/openra-copilot-agent/openra_copilot_agent/configs/: agent.yml
examples/mofa/agent-hub/openra-execute/: pyproject.toml
examples/mofa/agent-hub/openra-execute/openra_execute/: game_llm_executor.py  game_tool.py  game_tool_old.py  main.py
examples/mofa/agent-hub/openra-execute/openra_execute/templates/: chat.html
examples/mofa/agent-hub/openra-mcp-agent/: pyproject.toml
examples/mofa/agent-hub/openra-mcp-agent/openra_mcp_agent/: __init__.py  main.py  openra_tools.py
examples/mofa/examples/openra-controller/: ai_analysis.json  battlefield_state.json  execution_results.json  openra-controller-graph.html  openra-controller.yml  user_intent.json
examples/mofa/examples/openra-controller/OpenRA_Copilot_Library/: game_api.py
examples/mofa/examples/openra-mcp-dataflow/: .gitignore  README.md  openra-mcp-dataflow-graph.html  openra-mcp-dataflow.yml  run_mofa.sh
examples/mofa/examples/openra-single-controller/: openra-single-controller-graph.html  openra-single-controller.yml
examples/mofa/opencommand_flow/: README.md  opencommand_dataflow-graph.html  opencommand_dataflow.yml
examples/mofa/opencommand_node/: pyproject.toml
examples/mofa/opencommand_node/opencommand/: main.py
examples/mofa/opencommand_node/opencommand/web_ai/: README.md  ai_analysis.json  ai_analyzer.py  battlefield_reader.py  battlefield_state.json  execution_results.json  game_executor.py  requirements.txt  run.py  start_web.py  user_intent.json  web_chat_controller.py
missions/: Mission-01 Basic Building.md  Mission-02 Fog of War.md  Mission-03 Advanced Building.md  Mission-04 Air Strike.md  Mission-05 Basic Defese.md  mission1.md
solution/: __init__.py  ex.py  game_api.py  game_api_with_mission.py  mission1.py  mission2.py  mission3.py  mission4.py
solution/common/: build_system.py  fog_explorer.py
