[project]
name = "openra-copilot-agent"
version = "0.1.0"
description = "OpenRA Copilot Agent for MoFA - Single Node Version"
authors = [
    {name = "OpenRA Hackathon Team"},
]
dependencies = [
    "mofa",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["openra_copilot_agent"]